# philosophers

./: CMakeLists.txt  main.c  philo_one.h
philo_one/: Makefile  death.c  life.c  philo_one.h  utils.c
philo_three/: Makefile  death.c  life.c  main.c  philo_three.h  utils.c
philo_two/: Makefile  death.c  ft_atoi.c  life.c  philo_two.h  utils.c
